// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traverses directory tree up until it finds jest.config 1`] = `
  console.log
<<REPLACED>>/jest-config-js/some/nested/directory

      at Object.log (__tests__/a-banana.js:3:27)

`;

exports[`traverses directory tree up until it finds jest.config 2`] = `
● Multiple configurations found:

Jest will use \`path/to/jest.config.js\` for configuration, but Jest also
found configuration in \`path/to/package.json\`. Delete the \`"jest"\` key
in that file to silence this warning, or delete the \`jest.config.js\` file
to use the configuration from \`package.json\`.

Configuration Documentation:
https://jestjs.io/docs/en/configuration.html

● Multiple configurations found:

Jest will use \`path/to/jest.config.js\` for configuration, but Jest also
found configuration in \`path/to/package.json\`. Delete the \`"jest"\` key
in that file to silence this warning, or delete the \`jest.config.js\` file
to use the configuration from \`package.json\`.

Configuration Documentation:
https://jestjs.io/docs/en/configuration.html

PASS ../../../__tests__/a-banana.js
  ✓ banana
  ✓ abc
`;

exports[`traverses directory tree up until it finds jest.config 3`] = `
Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
`;

exports[`works with jest.config.js 1`] = `
● Multiple configurations found:

Jest will use \`path/to/jest.config.js\` for configuration, but Jest also
found configuration in \`path/to/package.json\`. Delete the \`"jest"\` key
in that file to silence this warning, or delete the \`jest.config.js\` file
to use the configuration from \`package.json\`.

Configuration Documentation:
https://jestjs.io/docs/en/configuration.html

● Multiple configurations found:

Jest will use \`path/to/jest.config.js\` for configuration, but Jest also
found configuration in \`path/to/package.json\`. Delete the \`"jest"\` key
in that file to silence this warning, or delete the \`jest.config.js\` file
to use the configuration from \`package.json\`.

Configuration Documentation:
https://jestjs.io/docs/en/configuration.html

PASS __tests__/a-banana.js
  ✓ banana
`;

exports[`works with jest.config.js 2`] = `
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
`;
